--- a/A-M_introductory_tutorial.org
+++ b/A-M_introductory_tutorial.org
@@ -13,12 +13,12 @@
 #+INFOJS_OPT: view:nil toc:nil ltoc:t mouse:underline buttons:0 path:http://orgmode.org/org-info.js
 #+LaTeX_CLASS: beamer
 #+LaTeX_CLASS_OPTIONS: [presentation,colorlinks,t]
+#+LATEX_HEADER: \usepackage{textcomp}
 ##+BEAMER_HEADER_EXTRA: \usepackage{hyperref}
 #+BEAMER_HEADER_EXTRA: \usepackage{pdfcomment}
 #+BEAMER_HEADER_EXTRA: \beamertemplatenavigationsymbolsempty
 #+BEAMER_HEADER_EXTRA: \setbeamertemplate{footline}[frame number]
 #+BEAMER_HEADER_EXTRA: \titlegraphic{\includegraphics[width=7cm]{./ansys+emacs.png}}
-#+LATEX_HEADER: \usepackage{textcomp}
 #+BEAMER_FRAME_LEVEL: 2
 #+EXPORT_SELECT_TAGS: export
 #+EXPORT_EXCLUDE_TAGS: noexport
@@ -28,9 +28,10 @@
 #+HTML: <img src="ansys+emacs.png" height=150 alt="Gmane">
 
 # the text and arrows (line width 4) in the drawings are done with inkscape
+# okular and acroread support PDF annotations, xpdf, Chrome and Evince not
 
 * Introduction
-** Introducing ANSYS-Mode - an APDL environment
+** Introducing ANSYS-Mode -- an APDL environment
    [[http://code.google.com/p/ansys-mode/][This project]] supports your APDL
 #+BEGIN_LaTeX
 \pdfannot % generic annotation
@@ -66,6 +67,7 @@
 \quad%
 #+END_LaTeX   
  suite [[http://www.ansys.com][ANSYS]].
+
 #+BEGIN_LaTeX
 \pdfannot % generic annotation
 % width 4cm % the dimension of the annotation can be controlled
@@ -81,8 +83,8 @@
 (ANSYS = ANalysis SYStem, registered TM)
 }%
 #+END_LaTeX   
-   
 #+LaTeX: \\[.2cm]
+#+HTML: <br>   
    It provides an extra mode to the [[http://www.gnu.org/software/emacs/][GNU Emacs editor]] for investigating
    and coding APDL.  The mode offers also managing and communication
    capabilities for various ANSYS processes, like interactive code
@@ -105,7 +107,9 @@
 }\quad%
 #+END_LaTeX   
    experience.
+
 #+LaTeX: \\[.2cm]
+#+HTML: <br>   
    [[http://www.gnu.org/home.en.html][GNU]]
 #+BEGIN_LaTeX
 \pdfannot % generic annotation
@@ -126,8 +130,8 @@
    Emacs is an up-to-date, powerful and
    extensible - yet free - editor. High quality software available for
    every operating system where ANSYS is running.
-
 #+LaTeX: \\[.4cm]
+#+HTML: <br>   
    In the following *C-c* or e. g. *M-c* means typing the <CTRL> or <ALT>
    key together with the <c> key.
   
@@ -136,13 +140,13 @@
   Most convenient is taking the pre-configured ANSYS-Mode in
   conjunction with the latest Emacs distribution for Win32/64 from 
   [[http://code.google.com/p/ansys-mode/downloads/list][Google Code's download page]].
-  
 ##+ATTR_HTML: width="1200"
 #+BEGIN_LaTeX
 \href{http://code.google.com/p/ansys-mode/downloads/list}{%
   \includegraphics[width=12cm]{./download.png}%
 }
 #+END_LaTeX 
+#+HTML: <img src="./download.png" alt="download page from Google Code">
   
 * Installation
 ** Install ANSYS-Mode together with Emacs
@@ -318,6 +322,7 @@
   \includegraphics[width=5cm]{./tour_of_Emacs.png}%
 }
 #+END_LaTeX
+#+HTML: <img src="./tour_of_Emacs.png" alt="download page from Google Code">
 
 ** Use the ANSYS-Mode built-in help
    Please type *C-h m* to open the mode help, especially for
@@ -407,6 +412,7 @@
   \includegraphics[width=5.5cm]{./gnu_emacs.png}%
 }
 #+END_LaTeX 
+#+HTML: <img src="./gnu_emacs.png" alt="download page from Google Code">
 
 *** Thank you for your time getting acquainted with ANSYS-Mode!
          :PROPERTIES:
