--- a/trunk/README
+++ b/trunk/README
@@ -21,21 +21,20 @@ sophisticated but its documentation is targeted for ANSYS users with
 little Emacs experience.
 
 Advantages compared to other APDL editors: Largest feature set, user
-extensible, costfree, integrated calculator, available for all OS, for
+extensible, cost-free, integrated calculator, available for all OS, for
 in-built help no ANSYS installation necessary.
 
 [http://www.gnu.org/home.en.html GNU] (Gnu's Not Unix) Emacs is an
 up-to-date, powerful and extensible - yet free - editor. High quality
 software available for every operating system where ANSYS is running.
 
-The current stable version (14.5.1) of ANSYS-Mode is available at the
-[http://code.google.com/p/ansys-mode Google Code site] (The command
-line way, e. g.: "wget
+The current stable version 14.5.1 of ANSYS-Mode is available at the
+[http://code.google.com/p/ansys-mode Google Code site] or with the
+command line way, e. g.: "wget
 http://ansys-mode.googlecode.com/files/ansys-mode-14.5.1.tgz").  The
-code is partially based on ANSYS version 14.5 (completions, help
-strings etc.).  Besides the code and Emacs you will find also in the
-download section two tutorials.  For an immediate access have a look
-at the
+some code (completions, help strings etc.) is based on ANSYS version
+14.5.  Besides the mode and Emacs you will find also in the download
+section two tutorials.  For an immediate access have a look at the
 [http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/A-M_introductory_tutorial.html introductory on-line version], here you are able to see the images in
 a higher resolution as in the PDF version.  And in the
 [http://duenenhof-wilhelm.de/dieter/ansys-mode_tutorial/A-M_in-depth_tutorial.html in-depth on-line tutorial] there is the source code highlighting
@@ -67,7 +66,7 @@ only implemented for GNU/Linux systems.
 * ANSYS process management (viewing error files, license status,
   starting the ANSYS help browser, etc.).
 
-* Solver comunication facilities, i. e. sending code fragments from
+* Solver communication facilities, i. e. sending code fragments from
   the macro file or commands interactively to an ANSYS solver process
   (GNU/Linux only).
 
@@ -92,13 +91,13 @@ only implemented for GNU/Linux systems.
 
 * Preview and/or insertion of extensible APDL code templates.  For
   example the function template shows *all* available ANSYS
-  parameteric- and get functions. The respective code snippets show
+  parametric- and get functions. The respective code snippets show
   examples of APDL work flows and considerable ANSYS know-how, these
   are easily extensible to boot.  The templates are partly interactive
   i. e. they are asking for or completing user input.
 
 * Alignment (beautification) of whole paragraphs or marked sections
-  with variable defintions.
+  with variable definitions.
 
 * Outlining (hiding and navigating) of code sections with Emacs'
   outline-minor-mode. With outline strings '!@' you have a heading
@@ -154,7 +153,7 @@ a certain code template, respectively.
   nothing!  Finding and browsing relevant APDL documentation is still
   cumbersome and too slow
 
-  As a highlight of this release you can now read immeadiately the
+  As a highlight of this release you can now read immediately the
   detailed ANSYS help in your web browser for *all* APDL command AND
   element names around the cursor (or for the first command in the
   current line if that fails to be valid keyword).  You may input your
@@ -224,7 +223,7 @@ Auxiliaries:
 * README -- This file
 * NEWS -- News and history
 * TODO -- Todos and deficiencies
-* LICENSE -- The GPL (Gnu Puplic License) Version 3
+* LICENSE -- The GPL (Gnu Public License) Version 3
 * default_el -- Configuration example file of an Emacs 'default.el'
 * fontification.mac -- APDL example file
 * A-M_introductory_tutorial-14.5.1.pdf -- Your first look at ANSYS-Mode?
@@ -278,10 +277,10 @@ Emacs minibuffer prompt, now type "load-file" (you might apply the
 <TAB> key for the Emacs auto-completion feature at every intermediate
 stage) and conclude this input with the <RET> key. Emacs will then
 prompt you for a file, type in the directory where you have extracted
-the code and "ansys-mode.el" (or better "ansys-mode.elc" for speed
-reasons if the compiled version is available) and press RET to execude
-the loading.  Thereafter call the mode itself with `M-x ansys-mode
-RET' for every new or existing APDL file.
+the code and "ansys-mode.el" (or "ansys-mode.elc" - for loading speed
+reasons - if the compiled version is available) and press RET to
+execute the loading.  Thereafter call the mode itself with `M-x
+ansys-mode RET' for every new or existing APDL file.
 
 ==== More convenient way; file configuration necessary ====
 
@@ -344,7 +343,7 @@ which contains also an APDL header and footer.
 
      (add-to-list 'auto-mode-alist '("\\.anf$" . ansys-mode))
 
-* Autoinsertion of code
+* Auto-insertion of code
 
 In case you also want to enjoy the auto insertion feature, which puts
 (optionally) some predefined body of ANSYS commands to every new APDL
@@ -354,11 +353,11 @@ file insert the following into '.emacs':
      (setq auto-insert-query t) ;insert only after request
      (add-to-list 'auto-insert-alist '(ansys-mode . [ansys-skeleton-compilation]))
 
-* Autoloading of helper functions
+* Auto-loading of helper functions
 
 With below section you are also able to use certain ANSYS related
 commands in a new Emacs session without the need of previously having
-explicitely called ansys-mode.
+explicitly called ansys-mode.
 
      (autoload 'ansys-customise-ansys "ansys-mode" "Activate the function for calling a special ANSYS customisation buffer." 'interactive)
      (autoload 'ansys-abort-file "ansys-mode" "Activate the function for  aborting ANSYS runs." 'interactive)
@@ -373,7 +372,7 @@ As a summary and example to these and further customisation options
 please have a look at the accompanying `default_el' example. This is
 helpful especially if you intend to use the mode's solver
 communication capabilities.  This file can be used, after renaming it
-to `default.el' and adjusting as as system wide startup file for Emacs
+to `default.el' and adjusting as as system wide start-up file for Emacs
 in the `EMACS_INSTALLDIR/site-lisp' directory and is therefore an
 alternative to customisations in `.emacs', your personal configuration
 file.
@@ -385,7 +384,7 @@ When you have a file under `ansys-mode' check out the menu bar's
 ANSYS Mode' or type "C-h m" (i. e. the <CTRL> key together with the
 <h> key and subsequently the <m> key), which will display the
 ANSYS-Mode help which is your `online' guide for its usage,
-keybindings and customisation options.
+key-bindings and customisation options.
 
 Templates, i.e. code snippets or so called skeletons might be extended
 in `ansys-template.el' and can be used similarly or complementarily to
@@ -418,7 +417,7 @@ For their ansys-mod.el from 1997 which gave the ideas to start
 ANSYS-Mode (the implementation though is different and many
 capabilities are new or extended)
 
-Then in mainly reversed cronological order:
+Then in mainly reversed chronological order:
 
 * Michael Kidner
 * Ilya Gurin
@@ -457,7 +456,7 @@ code in compiled form, please have a look at the documentation of the
 Emacs function `byte-recompile-directory'.
 
 ANSYS `format line' (multi-line highlighting) and `user variable'
-highlighting (when the mentioned flag above ist not set) are somewhat
+highlighting (when the mentioned flag above is not set) are somewhat
 brittle, please use "M-o M-o" to update the fontification in case the
 format line and all variables are not highlighted correctly.
 
