nldiag,cont,iter in -template.el and Alwin in README

--- a/README
+++ b/README
@@ -419,6 +419,7 @@ capabilities are new or extended)
 
 Then in mainly reversed chronological order:
 
+* Alwin Perras
 * Michael Kidner
 * Ilya Gurin
 * Alex Schroeder
