--- a/TODO
+++ b/TODO
@@ -159,8 +159,9 @@
     Google Code with download, documentation page
   - publication emails (with tutorial and news):
 
-    jens.2.missung@continental-corporation.com
-    joerg.menke@continental-corporation.com
+    afoleite@gmail.com,
+    jens.2.missung@continental-corporation.com,
+    joerg.menke@continental-corporation.com,
     daniel.balint@continental-corporation.com,
     marius.tarnovetchi@continental-corporation.com,
     Michaelk@vipac.com.au,
