working on hide-region.el for number blocks

--- a/README
+++ b/README
@@ -419,6 +419,7 @@ capabilities are new or extended)
 
 Then in mainly reversed chronological order:
 
+* Mathias Dahl, for hide-region.el
 * Alwin Perras
 * Michael Kidner
 * Ilya Gurin
