--- a/NEWS
+++ b/NEWS
@@ -30,6 +30,8 @@ Copyright (C) 2006 - 2013  H. Dieter Wilhelm, GPL V3
   help entries, in the previous release were unfortunately many
   keywords missing or entries incomplete.
 
+* As always: Enhancements and corrections for the APDL templates
+
 ===  Version 14.5.1 Sep 2012 ===
 
 * Added a function (C-c C-b or "M-x ansys-browse-ansys-help") showing
