--- a/TODO
+++ b/TODO
@@ -35,10 +35,11 @@
 
 *  14.5.2:
 ** TODO Freeze
+   - automatised pdf-export is not working any longer
+     makefile errors: Check tutorials
+   - add new functionalities to tutorial and manual
    - not yet warning message, if html help files are not found
    - makefile errors: Check tutorials
-   - -dynamic-highlighting is sluggish, highlighting somehow
-     retarded!!!
    - check *vwrite with gui mode and interactive mode (graphics window?)
    - C-c C-a does not align a pragraph if the mark was not set (first
       time file visit)!!!!!
@@ -55,6 +56,8 @@
      here is the tanslation of names to html files:
      - link to ANSYS-Mode APDL reference:
      - Chapters of structural APDL documentation:
+   - -dynamic-highlighting is sluggish, highlighting somehow
+     retarded!!!
    - TODOS: in fontification.org
      - deletion of vectors *del,Vector without request? ,,nopr?
      - check character variables 32 Chars. and highlight accordingly
@@ -328,7 +331,8 @@
    - alignment :: extend to vector definitions
 		  t(1,0) = 20,300,3094,
 		  t(1,1) =  3,  4,   9,
-   - Utility for clearing files like .rst, ... or using dired?
+   - Utility for clearing files like .rst, ... or using dired, clear_files.sh?
+     with listing listing of file types
    - E23.2 mouse-choose-completion obsolete
    - Configure the highlighting colours with black on white background
    - C-j, M-j are not skipping to `,' whith default command (from second
